# sparkid

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  bench_compare.py
.claude/skills/benchmark/: SKILL.md
.claude/skills/optimize-perf/: SKILL.md
.github/workflows/: release.yml  test.yml
docs/: format.md
js/: README.md  eslint.config.js  package-lock.json  package.json  test_overflow.ts  tsconfig.json  tsup.config.ts
js/bench/: benchmark.ts
js/src/: binary.ts  constants.ts  index.ts
js/tests/: test_sparkid.ts  tsconfig.json
python/: Cargo.toml  README.md  pyproject.toml
python/bench/: benchmark.py
python/rust/: lib.rs
python/src/sparkid/: __init__.py  _binary.py  _constants.py  _generator.py  _native.pyi
python/tests/: test_sparkid.py
rust/: Cargo.toml  README.md
rust/benches/: benchmark.rs
rust/src/: generator.rs  lib.rs
rust/tests/: test_sparkid.rs
rust/tests/no_std_check/: Cargo.toml
rust/tests/no_std_check/src/: lib.rs
site/: AGENTS.md  astro.config.mjs  package-lock.json  package.json
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
