[package]
name = "sparkid-python"
version = "2.1.1"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
sparkid = { path = "../rust" }
pyo3 = { version = "0.25", features = ["extension-module", "generate-import-lib"] }

[build-dependencies]
pyo3-build-config = { version = "0.25", features = ["resolve-config"] }

[profile.release]
codegen-units = 1
