[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkid"
version = "2.0.1"
description = "Fast, time-sortable, 21-char Base58 unique ID generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["id", "uuid", "unique", "sortable", "base58", "ulid", "ksuid"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/youssefm/sparkid"
Repository = "https://github.com/youssefm/sparkid"

[dependency-groups]
test = ["pytest"]
bench = ["nanoid", "python-ulid", "typing_extensions"]
dev = ["ruff>=0.15.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/sparkid"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
