[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "sparkid"
version = "2.1.0"
description = "Fast, time-sortable, 21-char Base58 unique ID generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["id", "uuid", "unique", "sortable", "base58", "ulid", "ksuid"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/youssefm/sparkid"
Repository = "https://github.com/youssefm/sparkid"

[dependency-groups]
test = ["pytest"]
bench = ["nanoid", "python-ulid", "typing_extensions"]
dev = ["ruff>=0.15.8"]

[tool.maturin]
python-source = "src"
module-name = "sparkid._native"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
