[workspace]
members = [".", "tests/no_std_check"]

[package]
name = "sparkid"
version = "2.0.1"
edition = "2021"
rust-version = "1.75"
description = "Fast, time-sortable, 21-char Base58 unique ID generator"
license = "MIT"
repository = "https://github.com/youssefm/sparkid"
keywords = ["id", "uuid", "unique", "sortable", "base58"]
categories = ["algorithms", "value-formatting"]

[features]
default = ["std"]
std = ["rand/std"]
serde = ["dep:serde"]
test-internals = []

[dependencies]
rand = { version = "0.9.2", default-features = false, features = [
    "std_rng",
    "os_rng",
] }
serde = { version = "1.0.228", default-features = false, optional = true }

[dev-dependencies]
sparkid = { path = ".", features = ["test-internals"] }
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v4", "v7"] }
ulid = "1"
nanoid = "0.4"
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

[[bench]]
name = "benchmark"
harness = false
